[package]
name = "app-universe"
version = "0.2.1"
description = "A framework agnostic approach to managing frontend application state."
edition = "2018"
keywords = ["state", "frontend"]
license = "MIT/Apache-2.0"
repository = "https://github.com/AkinAguda/app-universe"
documentation = "https://docs.rs/app_universe"

[features]
test-utils = []

[dependencies]
