[package]
name = "app-universe"
version = "1.0.0"
description = "A framework agnostic approach to managing frontend application state."
edition = "2018"
keywords = ["state", "frontend"]
license = "MIT/Apache-2.0"
repository = "https://github.com/AkinAguda/app-universe"
documentation = "https://docs.rs/app_universe"

[features]
test-utils = []

[dependencies]
